--- a/src/containers/Collections/Collections.module.scss
+++ b/src/containers/Collections/Collections.module.scss
@@ -1,11 +1,13 @@
 .Collections{
-    grid-column:center-start/col-end 4 ;
+    grid-column:full-start/col-end 3;
+    align-self: start;
     display: grid;
-    // justify-items: stretch;
-    grid-row-gap: 2rem;
+    grid-row-gap: .5rem;
     padding: 2rem 0rem 2rem 0rem;
     background-color:var(--base_color_dark);
-    margin: 1rem 0rem 1rem 0rem;
+    margin: 5rem 0rem 5rem 0rem;
+    align-items:  center;
+    margin-left: 10rem;
 }
 
 
