--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -10,8 +10,12 @@
   }
   :root{
     --color_gold:#FFD700; 
+    --color_gold:#ffa41b; 
+    --color_gold_light:#fcd59b; 
+    --color_red:#800000; 
+    --color_red:#dd2c00; 
+    --color_red_light:#A52A2A; 
     --base_color_dark: #252525; 
-    // $base_color_green_light: #19DFC7; 
     --base_color_light: #f6f6f6; 
 
     --font_family_1: 'Poller One', cursive;
