--- a/src/components/collectionSingle/Collection.module.scss
+++ b/src/components/collectionSingle/Collection.module.scss
@@ -7,28 +7,25 @@
     grid-column-gap: 3rem;
     justify-items: center;
     align-items: center;
-    margin: 0 2rem 0 2rem;
+    margin: 0 .5rem 0 .5rem;
     border-left: 5px solid transparent;
-    transition: all .4s;
+    transition: all .7s;
+
 
     .img{
-        height: 10rem;
-        width: 10rem;
+        height: 11rem;
+        width: 11rem;
         border-radius: 50%;
         display: block;
         margin: 1rem;
         border: .5rem  solid transparent;
         transition: all .4s;
-        // &:hover{
-        //     box-shadow: .5rem .5rem 1.5rem rgba(black, 0.4);
-        //     border: .5rem solid var(--color_red);
-        // }
     }
     h2{
         font-size: 2.2rem;
     }
     &:hover {
-        border-left: 5px solid var(--color_red);
+        border-left: 5px solid var(--color_red_light);
     }
     &:hover  .img{
         box-shadow: .5rem .5rem 1.5rem rgba(black, 0.4);
