Active col style added

--- a/src/components/Assets/Assets.module.scss
+++ b/src/components/Assets/Assets.module.scss
@@ -5,9 +5,11 @@
     grid-template-rows: minmax(min-content, max-content);
     grid-row-gap: .5rem;
     align-items:  center;
-    padding: 2rem 0rem 2rem 0rem;
+    padding: 0.5rem 0rem 4rem 0rem;
     background-color:var(--base_color_dark);
     margin: 5rem 0rem 5rem 0rem;
     margin-left: -5rem;
     margin-right: -10rem;
+    border-radius: 10px;
+
 }
