--- a/src/containers/Collections/Collections.module.scss
+++ b/src/containers/Collections/Collections.module.scss
@@ -3,11 +3,12 @@
     align-self: start;
     display: grid;
     grid-row-gap: .5rem;
-    padding: 2rem 0rem 2rem 0rem;
+    padding: 4rem 0rem .5rem 0rem;
     background-color:var(--base_color_dark);
     margin: 5rem 0rem 5rem 0rem;
     align-items:  center;
     margin-left: 10rem;
+    border-radius: 10px;
 }
 
 
