--- a/src/components/Assets/AssetSingle/Asset.module.scss
+++ b/src/components/Assets/AssetSingle/Asset.module.scss
@@ -9,18 +9,26 @@
     align-items: center;
     margin: 0 .5rem 0 .5rem;
     align-content: center;
-    border-left: 5px solid transparent;
-    transition: all .7s;
+    transition: var(--transition);
+    border: 3px solid transparent;
+    border-radius: 10px;
+    padding: 3px;
+
 
     &:hover {
-        border-left: 5px solid var(--color_red_light);
+        border: 3px solid var(--color_red_light);
     }
     
     &:hover .img{
         box-shadow: .5rem .5rem 1.5rem rgba(black, 0.4);
-        // border: .5rem solid var(--color_red);
-        border: .2rem solid transparent;
+        transform: scale(1.08);
     }
+
+    &:hover .img.active{
+        box-shadow: none;
+        transform: scale(1);
+    }
+
     .img{
         height: 11rem;
         width: 11rem;
@@ -28,12 +36,13 @@
         display: block;
         margin: 1rem;
         margin-left: 5rem;
-        border: .5rem  solid transparent;
-        transition: all .4s;
+        border: var(--image_boredr_transp);
+        transition: all .6s;
+        transition: var(--transition);
     }
   
     .img.active{ 
-        border: .5rem solid var(--color_red_light);
+        border: .3rem solid var(--color_gold);
     }
 
 
@@ -50,43 +59,12 @@
         border-radius: 50%;
         background-color: red;
     }
-
-    .btn {
-        text-decoration: none;
-        border-radius:1rem;
-        cursor: pointer;
-        display: inline-block;   
-        padding: 0.5rem 1.0rem;
-        background-color:var(--color_red);
-        color: var(--base_color_light);
-        box-shadow: 0 .5rem 1rem rgba(black, 0.4);  
-        font-size: 1.6rem;
-        font-family:var(--font_family_1);
-        transition: all .2s;
-        border: 2px solid transparent;
-        margin-right: 2rem;
-       
-        
-        &:hover {
-            color: var(--color_gold);
-            border: 2px solid var(--color_red_light);
-        }
-       
-
-        // @include respond(tabl-lands-1200) {
-        //     padding: 1.5rem 2.2rem;
-        // }
-    
-        // @include respond(tabl-port-900) {
-        //     padding: 1.0rem 1.5rem;
-        // }
-    
-        // @include respond(tabl-port-800) {
-        //     padding: 1.0rem 1.5rem;
-        //     font-size: 1.5rem;
-        // }  
-    
-    }
   
 }
 
+.Box_active{
+    border: 3px solid var(--color_gold); 
+    &:hover{
+        border: 3px solid var(--color_gold);
+    }
+}
