--- a/src/components/collectionSingle/Collection.module.scss
+++ b/src/components/collectionSingle/Collection.module.scss
@@ -1,5 +1,5 @@
 .Collection{
-    min-height: 12rem;
+    min-height: 11.5rem;
     background-color: var( --base_color_light);
     display: grid;
     grid-template-columns:min-content 1fr;
@@ -10,6 +10,8 @@
     margin: 0 .5rem 0 .5rem;
     border-left: 5px solid transparent;
     transition: all .7s;
+    border-radius: 10px;
+    padding: 3px;
 
 
     .img{
@@ -18,17 +20,32 @@
         border-radius: 50%;
         display: block;
         margin: 1rem;
-        border: .5rem  solid transparent;
+        border: var(--image_boredr_transp);
         transition: all .4s;
     }
+
     h2{
         font-size: 2.2rem;
     }
+
     &:hover {
         border-left: 5px solid var(--color_red_light);
     }
+    
     &:hover  .img{
         box-shadow: .5rem .5rem 1.5rem rgba(black, 0.4);
-        border: .2rem solid transparent;
+        transform: scale(1.08);
+    }
+}
+.Collection_active{
+    border-left: 5px solid var(--color_gold);
+
+    &:hover{
+        border-left: 5px solid var(--color_gold);
+    }
+
+    &:hover .img{
+        box-shadow: none;
+        transform: scale(1);
     }
 }
