--- a/src/components/Assets/AssetSingle/Asset.module.scss
+++ b/src/components/Assets/AssetSingle/Asset.module.scss
@@ -1,8 +1,8 @@
+@import '../../../sass/mixins';
 .Asset{
-    min-height: 11.5rem;
     background-color: var(--base_color_light);
     display: grid;
-    grid-template-columns:min-content  1fr min-content max-content;
+    grid-template-columns:min-content  minmax(min-content,1fr) min-content max-content;
     grid-template-rows: min-content;
     grid-column-gap: 5rem;
     justify-items: center;
@@ -13,6 +13,10 @@
     border: 3px solid transparent;
     border-radius: 10px;
     padding: 3px;
+   
+    @include respond(tabl-lands-1350) {
+        grid-column-gap: 2rem;
+    }
 
 
     &:hover {
@@ -39,6 +43,11 @@
         border: var(--image_boredr_transp);
         transition: all .6s;
         transition: var(--transition);
+
+        @include respond(tabl-lands-1000) {
+             height: 9rem;
+            width: 9rem;
+        }
     }
   
     .img.active{ 
@@ -51,6 +60,10 @@
         margin-right: 2rem;
         margin-left: 5rem;
         justify-self: start;
+         
+        @include respond(tabl-lands-1000) {
+            font-size: 1.6rem;
+        }
     }
     .check{
         position: relative;
