--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -10,5 +10,7 @@
         color: var(--color_gold);
         font-family: var( --font_family_1);
         text-transform: uppercase;
+        border: 3px solid var(--color_gold);
+        padding: 2rem 10rem 2rem 10rem;
     }
 }
