--- a/src/components/UI/Select/Select.module.scss
+++ b/src/components/UI/Select/Select.module.scss
@@ -1,9 +1,10 @@
 .Select{
     margin: 2rem;
     justify-self: start;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-family: var(--font_family_1);
     outline: none;
+    margin-right: 3rem;
 }
 // label{
 //     font-size: 1.6rem;
